src/main/java/com/example/restaurant_advisor/error/NotFoundException.java
package com.example.restaurant_advisor.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String msg) {
        super(msg);
    }
}